feat: springboot version updates and sonarlint fixes